--- a/cm-tests/CMakeLists.txt
+++ b/cm-tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Andrue Peters
 # 10/4/2020
-add_executable(ClientTests src/tst_clienttests.cpp)
+add_executable(ClientTests src/client-tests.cpp.cpp)
 add_test(NAME ClientTests COMMAND ClientTests)
 
 target_link_libraries(ClientTests PRIVATE Qt::Test)
