--- a/cm-ui/CMakeLists.txt
+++ b/cm-ui/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)
+find_package(QT NAMES Qt6 COMPONENTS Core Quick REQUIRED)
+find_package(Qt6 COMPONENTS Core Quick REQUIRED)
 
 if(ANDROID)
     add_library(cm-ui SHARED
@@ -17,4 +17,4 @@ endif()
 target_compile_definitions(cm-ui
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(cm-ui
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick)
+  PRIVATE Qt6::Core Qt6::Quick)
