--- a/cm-lib/CMakeLists.txt
+++ b/cm-lib/CMakeLists.txt
@@ -1,8 +1,10 @@
 
-add_library(cm-lib SHARED
-  src/models/client.cpp
-)
+add_library(cm-lib STATIC
+    src/models/client.cpp
+    src/controllers/main-controller.cpp
+    src/controllers/main-controller.h
+        )
 
-target_include_directories(cm-lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src src/models)
-target_link_libraries(cm-lib PRIVATE Qt${QT_VERSION_MAJOR}::Core)
+target_include_directories(cm-lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src )
+target_link_libraries(cm-lib PRIVATE Qt6::Core)
 target_compile_definitions(cm-lib PRIVATE CMLIB_LIBRARY)
